--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-    "title": "Resume",
-    "name": "startbootstrap-resume",
+    "title": "Caitlin-Westerfield-Resume",
+    "name": "Caitlin-Westerfield-Resume",
     "version": "4.1.1",
     "description": "Resume is a simple, yet elegant resume and CV theme for Bootstrap 4.",
     "keywords": [
@@ -16,10 +16,15 @@
         "url": "https://github.com/BlackrockDigital/startbootstrap-resume/issues",
         "email": "feedback@startbootstrap.com"
     },
+    "engines": {
+      "node": "6.11.2",
+      "npm": "5.3.0"
+    },
     "license": "MIT",
-    "author": "Start Bootstrap",
+    "author": "Caitlin Westerfield",
     "contributors": [
         "David Miller (http://davidmiller.io/)"
+        "Caitlin Westerfield (http://www.caitlinwesterfield.com/)"
     ],
     "repository": {
         "type": "git",
@@ -29,7 +34,8 @@
         "bootstrap": "4.1.1",
         "devicons": "^1.8.0",
         "jquery": "3.3.1",
-        "simple-line-icons": "^2.4.1"
+        "simple-line-icons": "^2.4.1",
+        "express": "^4.15.3",
     },
     "devDependencies": {
         "browser-sync": "2.24.3",
